--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.7"
+# command to install dependencies
 install:
-    - make build
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - test
