--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ ibm-watson = "^3.4"
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
 
+[tool.poetry.scripts]
+tobo = 'toboggan.server:main'
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
