--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ license = "MIT"
 python = "^3.7"
 CherryPy = "^18.2"
 ibm-watson = "^3.4"
+spacy = "^2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
