--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python = "^3.7"
 CherryPy = "^18.2"
 ibm-watson = "^3.4"
 spacy = "^2.1"
+torch = "^1.3"
+transformers = "^2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
