--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,16 @@ authors = [
 ]
 license = "MIT"
 
+[[tool.poetry.source]]
+name = 'pytorch-wheels'
+url = 'https://download.pytorch.org/whl/torch_stable.html'
+
 [tool.poetry.dependencies]
 python = "^3.7"
 CherryPy = "^18.2"
 ibm-watson = "^3.4"
 spacy = "^2.1"
-torch = "^1.3"
+torch = "1.3.0*"
 transformers = "^2.1"
 
 [tool.poetry.dev-dependencies]
