Add faker as a dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ transformers = "^2.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
 pylint = "^2.4"
+faker = "^2.0"
 
 [tool.poetry.scripts]
 tobo = 'toboggan.server:main'
