--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ python = "^3.7"
 CherryPy = "^18.2"
 ibm-watson = "^3.4"
 spacy = "^2.1"
-torch = "^1.3"
+torch = "1.3.0"
 transformers = "^2.1"
 
 [tool.poetry.dev-dependencies]
