--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ ibm-watson = "^3.4"
 spacy = "^2.1"
 torch = "1.3.0"
 transformers = "^2.1"
+pattern = "^3.6"
+nltk = "^3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
