--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ torch = "1.3.0"
 transformers = "^2.1"
 pattern = "^3.6"
 nltk = "^3.4"
+Google-Images-Search = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
